wrong color in ios fix

--- a/src/components/AddItem.css
+++ b/src/components/AddItem.css
@@ -37,7 +37,7 @@
   height: 100%;
   
   padding: 1rem;
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
   background: #292929;
 
   /* transition: background 0.2s; */
@@ -115,5 +115,5 @@
   display: flex;
   align-items: center;   
   justify-content: center; 
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
 }
