--- a/src/components/EditItem.css
+++ b/src/components/EditItem.css
@@ -27,7 +27,7 @@
   height: 100%;
 
   padding: 1rem;
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
 
 
 }
@@ -91,5 +91,5 @@
   display: flex;
   align-items: center;   
   justify-content: center; 
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
 }
