--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -33,7 +33,7 @@
   height: 100%;
   
   padding: 1rem;
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
   background: #292929;
 
   /* transition: background 0.2s; */
@@ -161,5 +161,5 @@
   display: flex;
   align-items: center;   
   justify-content: center; 
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
 }
