--- a/src/components/UIElements/Modal.css
+++ b/src/components/UIElements/Modal.css
@@ -13,11 +13,11 @@
   background: #2c2c2c;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.7);
   border-radius: 8px;
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
 }
 
 .modal__header {
- 
+
   color: white;
 }
 
@@ -26,7 +26,7 @@
 }
 
 .modal__content {
-    display: flex;
+  display: flex;
   justify-content: center;
   gap: 1rem;
   padding: 0.5rem 0.5rem;
@@ -52,9 +52,7 @@
   transition: border-color 0.25s;
 
   display: flex;
-  align-items: center;   
-  justify-content: center; 
-  color: white;
+  align-items: center;
+  justify-content: center;
+  color: rgba(255, 255, 255, 0.87);
 }
-
-
